# go2-w_ws

./: .editorconfig  .gitattributes  .gitignore  GEMINI.md  README.md  cyclonedds.xml  info.md  pyproject.toml
01_learning_python_sdk/: README.md
01_learning_python_sdk/scripts/: high_level_attitude.py  high_level_walk.py  low_level_joint_pd.py  low_level_leg_sine.py  patch_sdk.py
02_ros2_jazzy_middleware/: README.md
02_ros2_jazzy_middleware/src/: odom_monitor.py
03_gazebo_simulation/: README.md
04_isaac_lab_rl/: README.md
05_perception_and_vision/: README.md
05_perception_and_vision/src/: .gitkeep
06_onboard_deployment/: README.md
docs/: progress_log.md
docs/notes/: 01_env_setup.md  network_topology.md  safety_protocols.md
